Add Open Modal Button

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 </head>
 
 <body>
+    <section class="section flex-container">
+        <button class="open-modal-btn">Open Dracula</button>
+    </section>
 
     <script src="script.js"></script>
 </body>
